# sqlmodel-repo

./: .gitignore  README.md  pyproject.toml  sqlmodel_repo.py  test.py
.github/workflows/: flake8.yml  python-publish.yml
