[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlmodel_repo"
version = "0.0.2"
description = "Active record mixin for SQLModel"
readme = "README.md"
keywords = ["sqlmodel", "sqlalchemy", "orm", "active record"]
dependencies = [
    "sqlmodel",
]
requires-python = ">3.11.0"
